ubuntu-dev-tools (0.60) UNRELEASED; urgency=low

  [ Jonathan Davies ]
  * ubuntutools/common.py: Now split into multiple files depending on
    function.
  * Adjusted imports on all files as necessary for the change above.

  [ Iain Lane ]
  * requestsync: Only attempt to change bug importance if in ubuntu-dev, as it
    will fail otherwise (LP: #320984).
  * ubuntutools/lp/functions.py: Rename urlopener import as it conflicts with
    a variable, causing an error.

  [ Luca Falavigna ]
  * pull-debian-source: do not fail if package name contains a hypen.
  * buildd: display help message if no parameters are passed.

 -- Luca Falavigna <dktrkranz@ubuntu.com>  Sun, 25 Jan 2009 16:48:02 +0100

ubuntu-dev-tools (0.59) jaunty; urgency=low

  * Move /etc/bash_completion.d/pbuilder-dist/pbuilder-dist created in
    pre-0.30 versions to /etc/bash_completion.d/pbuilder-dist in the preinst.

 -- Loic Minier <lool@dooz.org>  Mon, 19 Jan 2009 18:02:55 +0100

ubuntu-dev-tools (0.58) jaunty; urgency=low

  [ Loic Minier ]
  * Fix a bunch of hyphen-used-as-minus-sign lintian informational tags.
  * Don't repeat Section in the binary package's control chunk (pleases
    lintian).
  * New script, lp-set-dup, allows marking a bug and all its dups as a
    duplicate of a new main bug.
   * Re-add debian/pycompat to have an idempotent clean:: as cdbs creates the
     file during clean; Debian #512300.

 -- Loic Minier <lool@dooz.org>  Mon, 19 Jan 2009 17:45:26 +0100

ubuntu-dev-tools (0.57) jaunty; urgency=low

  * requestsync: Skip existing bug check if no credentials are
    found (LP: #318120).

 -- Jonathan Davies <jpds@ubuntu.com>  Sat, 17 Jan 2009 22:02:39 +0000

ubuntu-dev-tools (0.56) jaunty; urgency=low

  * manage-credentials: Tighted security by making credentials files and
    folder world unreadable.
  * common.py: Improved no credentials found error message to show which
    consumer token is needed.
  * requestsync: Catch credentials error to hide traceback.