@@ -23,7 +23,6 @@ import os
 import sys
 from optparse import OptionParser, make_option
 from ubuntutools.lp.libsupport import *
-from ubuntutools.misc import mkdir
 
 class CmdOptions(OptionParser):
     
@@ -104,7 +103,7 @@ def create_credentials(options):
     else:
         credentialsDir = os.path.expanduser("~/.cache/lp_credentials")
         if not os.path.isdir(credentialsDir):
-            mkdir(credentialsDir)
+            os.makedirs(credentialsDir)
         os.chmod(credentialsDir, 0700)
         filepath = os.path.expanduser("%s/%s-%s.txt" % \
             (credentialsDir, options.consumer, str(options.level).lower()))
